codepkg/objects/Application_Extension__c.object
<CustomObject>
    <fields>
        <fullName>Action_involves_herbicides_biologicals__c</fullName>
        <label>Action involves herbicides/biologicals?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_involves_seeding_replanting__c</fullName>
        <label>Action involves seeding/replanting?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_involves_vegitation_fuel_removal__c</fullName>
        <label>Action involves vegitation/fuel removal?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Maintenance_Amount__c</fullName>
        <label>Annual Maintenance Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Any_road_construction_or_vehicle_access__c</fullName>
        <label>Any road construction or vehicle access?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Application Extensions</relationshipLabel>
        <relationshipName>Application_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Cost_Ratio__c</fullName>
        <label>Benefit Cost Ratio</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cite_codes_and_attach__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cite codes and attach</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Codes_building_land_use_development__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Codes (building, land use, development)</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirm_ineligible_activity_to_be_ID_d__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm ineligible activity to be ID&apos;d</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_only_eligible_mitigation_measure__c</fullName>
        <label>Confirm only eligible mitigation measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consult_w_Historic_Prsrvtion_conducted__c</fullName>
        <label>Consult w/ Historic Prsrvtion conducted?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converting_or_Impacting_Farmland__c</fullName>
        <inlineHelpText>If important farmland may be present on the site per item and where project activities may affect land use the Natural Resource Conservation Service (NCRS) Form AD 1006 should be downloaded and submitted to NRCS for review and rating.  The form is available on the NRCS web site.</inlineHelpText>
        <label>Converting or Impacting Farmland?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Effectiveness_Determined__c</fullName>
        <label>Cost Effectiveness Determined</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_estimate_includes_eligible_costs__c</fullName>
        <label>Cost estimate includes eligible costs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Critical_facilities_to_be_protected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Critical facilities to be protected</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Market_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The subapplicant must establish a date for all  property valuations for consistency among all project owners (appraisal or tax assessor information based on the same point in time).</inlineHelpText>
        <label>Date of Market Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Defensble_Space_meet_criteria_for_CATEX__c</fullName>
        <label>Defensble Space meet criteria for CATEX?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Describe_Def_Space_treatment_distance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe Def Space treatment &amp; distance</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_aquisition_activity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicate how many properties, the valuation method , personnel  managing the project and completing the tasks involved. Timeline of acquiring the properties along with demolition/relocation, and priority of selected properties.

All structures must be demolished or removed within 90 days. Thought should be put into meeting the 90 requirement with projects that have multiple structures. Local, State, and Federal procurement requirements must be followed 

Reference: 2015 HMA Guidance Part IV H.11;2015</inlineHelpText>
        <label>Describe aquisition activity</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_hzardous_toxic_subsances__c</fullName>
        <label>Describe hzardous/toxic subsances</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Describe_mitigation_solution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe mitigation solution</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_other_activities__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe other activities</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_plan_priorities__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe plan priorities</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_process_roles_responsibilities__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference: 44 CFR 201.6 (C)(1)</inlineHelpText>
        <label>Describe process, roles/responsibilities</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_proposed_land_use__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Allowable land uses for open space generally include parks for outdoor recreational activities, wetlands management, nature reserves, cultivation, grazing, camping (except where adequate warning time is not available to allow for evacuation), unpaved surfaces, and other uses that FEMA determines are compatible with the award and deed restrictions. 

Reference: 2015 HMA Guidance Addendum, A.4.4 &amp; A.6.1.</inlineHelpText>
        <label>Describe proposed land use</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_source_of_hazard_in_the_area__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe source of hazard in the area</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_the_plan_adoption_process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe the plan adoption process.</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_meets_International_Building_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Design meets International Building Code</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doc_of_Risk_Determiniation_Imminent_Risk__c</fullName>
        <inlineHelpText>If the acquisition is flood-related select N/A.

Reference: 2015 HMA Guidance, Part IV I.9</inlineHelpText>
        <label>Doc of Risk Determiniation/Imminent Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESL_community_direction_program__c</fullName>
        <label>ESL community direction program?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Endngrd_ThreatndSpecies_CriticalHabitat__c</fullName>
        <inlineHelpText>The USFWS Information for Planning and Consultation web site (https://ecos.fws.gov/ipac/) can be used to search for Federally-listed threatened and endangered species on the project site.</inlineHelpText>
        <label>Endngrd/ThreatndSpecies/CriticalHabitat?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity_Responsible__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Entity Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Habitat_description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Existing Habitat description</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Federal_Share_Request__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Federal Share Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Cost_of_Maintenance__c</fullName>
        <label>Future Cost of Maintenance</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Future_Maintenance_Schedule__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Future Maintenance Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Maintenance_Tasks_Involved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Future Maintenance Tasks Involved</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Have_all_specific_sites__c</fullName>
        <label>Is Project Site Identified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Historic_and_Cultural_Resources__c</fullName>
        <inlineHelpText>Records searches are the primary means through which California Historical Resources Information System (CHRIS) information is disseminated. A records search consists of a review of historical resources data on file at an Information Center (IC) regarding a specific geographic area.  A records search may be conducted by filling out a CHRIS Data Request Form. The form can be obtained for the State of California Department of Parks and Recreation&apos;s website.</inlineHelpText>
        <label>Historic and Cultural Resources?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_action_meets_purpose_and_need__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>How action meets purpose and need</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_activity_will_be_coordinated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Information should be included about the planning process for participating jurisdictions.  The final document must include information concerning how it was prepared (e.g the time period to complete the plan, the type and outcome of meetings), who was involved in the planning process (e.g., the composition of the planning team), and how the public was involved.  The plan should also document how the planning team was formed and how each party represented contributed to the process.

• Does each jurisdi</inlineHelpText>
        <label>How activity will be coordinated</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_generator_deploy_time_handled_in_BCA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>How generator deploy time handled in BCA</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_planning_team_to_coord_w_contractor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>How planning team to coord w/ contractor</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_structural_protecion_is_provided__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>How structural protecion is provided</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_will_project_protect_structures__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>How will project protect structures?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_will_vulnerabiltiy_be_reduced__c</fullName>
        <label>How will vulnerabiltiy be reduced?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_yes_URA_costs_estimates_in_budget__c</fullName>
        <inlineHelpText>URA applies to tenants (displaced involuntarily) only, not homewowners (displaced voluntarily) 

Reference: 2015 HMA Guidance Addendum, A.6.10</inlineHelpText>
        <label>If yes, URA costs estimates in budget?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_or_adjacent_to_historic_district__c</fullName>
        <inlineHelpText>For sites located within a residential or historic district, a Visual Impact Assessment (VIA) should be performed by a qualified landscape architect. Information on VIAs and guidance for developing them is provided on the California Department of Transportation (DOT)’s web site (http://www.dot.ca.gov/design/lap/landscape-design/via/).</inlineHelpText>
        <label>In or adjacent to historic district?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicate_if_a_contractor_will_be_used__c</fullName>
        <label>Indicate if a contractor will be used.</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invasive_Species_Will_the_project_incl__c</fullName>
        <label>Invasive Species – Will the project incl</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Document_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Document Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Project_Budget_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Project Budget Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_cost_less_than_5_250_acre__c</fullName>
        <label>Is cost less than $5,250/acre?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_plan_encompass_multiple_jurisdictions__c</fullName>
        <label>Is plan encompass multiple jurisdictions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_planint_re_veg_or_grading_requried__c</fullName>
        <inlineHelpText>Eligible items include grading, leveling, and site stabilization

Aesthetic improvements and landscaping are not eligible

Reference: 2015 HMA Guidance Addendum,  A.3.3 . A.3.3 Table 1 &amp; 6.1</inlineHelpText>
        <label>Is planint, re-veg, or grading requried?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_an_expiration_date_of_the_Non__c</fullName>
        <label>Is there an expiration date of the Non-</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_stand_alone_project__c</fullName>
        <label>Is this a stand-alone project?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_project_phased__c</fullName>
        <formula>TEXT(Application__r.Is_this_project_phased__c)</formula>
        <label>Is this project phased?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_wildfire_mitigation_method_eligible__c</fullName>
        <label>Is wildfire mitigation method eligible?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_participants_with_letters_of_intent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Plan Adoption: The narrative describes the plan drafting process, including State and
FEMA reviews (i.e., approval pending adoption), adoption by participating jurisdictions, and
final approval by FEMA.

Reference: 2015 HMA Guidance, Part IV H.3.1</inlineHelpText>
        <label>List participants with letters of intent</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maintenance_Date_Docusign__c</fullName>
        <description>This field is used for Docusign purpose</description>
        <formula>IF(ISNULL(Maintenance_Date__c), &apos;&apos;, text(MONTH( Maintenance_Date__c )) +&apos;/&apos;+  text(DAY( Maintenance_Date__c )) +&apos;/&apos;+  text(YEAR( Maintenance_Date__c )))</formula>
        <label>Maintenance Date Docusign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Maintenance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Match_Commitment_Date_Docusign__c</fullName>
        <description>This field is used for Docusign purpose.</description>
        <formula>IF(ISNULL(Match_Commitment_Date__c), &apos;&apos;, text(MONTH( Match_Commitment_Date__c  )) +&apos;/&apos;+  text(DAY( Match_Commitment_Date__c  )) +&apos;/&apos;+  text(YEAR( Match_Commitment_Date__c  )))</formula>
        <label>Match Commitment Date Docusign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Commitment_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Match Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maximum_Eligible_Management_Cost__c</fullName>
        <formula>(  Federal_Share_Request__c  / 0.75 )  * 0.05</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Eligible Management Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meet_local_fire_codes_and_standards__c</fullName>
        <label>Meet local fire codes and standards?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Methods_of_demolition_debris_managment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Methods of demolition include deconstruction,  bull dozing, burning, etc. Include any other site elements that may require demolition such as well decommissioning, septic tank removal, and utility termination. 

All demolition debris and household hazardous wastes are required to be discarded at an approved landfill (including debris from the demolition of houses, garages, driveways, sidewalks, and above-grade concrete slabs).

Reference: 2015 HMA Guidance Addendum,  A 3.3 Table 1</inlineHelpText>
        <label>Methods of demolition / debris managment</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Migratory_Flyway_Barrier_of_30_or_highe__c</fullName>
        <label>Migratory Flyway Barrier of 30&apos; or highe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Funding_Source_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name of Funding Source(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Narrative_for_Project_Cost_Effectiveness__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Narrative for Project Cost Effectiveness</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Fed_Share_Avail_Start_Date_Docusign__c</fullName>
        <description>This field is for docusign purpose.</description>
        <formula>IF(ISNULL(Non_Federal_Share_Match_Availability_S__c), &apos;&apos;, text(MONTH( Non_Federal_Share_Match_Availability_S__c )) +&apos;/&apos;+  text(DAY( Non_Federal_Share_Match_Availability_S__c )) +&apos;/&apos;+  text(YEAR( Non_Federal_Share_Match_Availability_S__c )))</formula>
        <label>Non-Fed Share Avail Start Date Docusign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Fed_Share_Exp_Date_Docusign__c</fullName>
        <description>This field is for docusign purpose.</description>
        <formula>IF(ISNULL(Non_Federal_Share_Match_Expiration_Dat__c), &apos;&apos;, text(MONTH( Non_Federal_Share_Match_Expiration_Dat__c )) +&apos;/&apos;+  text(DAY( Non_Federal_Share_Match_Expiration_Dat__c )) +&apos;/&apos;+  text(YEAR( Non_Federal_Share_Match_Expiration_Dat__c )))</formula>
        <label>Non-Fed Share Exp Date Docusign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Federal_Cost_Share_Match_Percentage__c</fullName>
        <defaultValue>0.25</defaultValue>
        <label>Non-Federal Cost Share(Match) Percentage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Non_Federal_Cost_Share_Match__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Non-Federal Cost Share (Match)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Federal_Cost_Share_Source__c</fullName>
        <label>Non-Federal Cost Share Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local Agency Funding</fullName>
                </value>
                <value>
                    <fullName>Private Non-Profit Funding</fullName>
                </value>
                <value>
                    <fullName>State Agency Funding</fullName>
                </value>
                <value>
                    <fullName>Other Agency Funding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Federal_Share_Match_Availability_S__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Non-Federal Share (Match) Availability S</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Federal_Share_Match_Expiration_Dat__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Non-Federal Share (Match) Expiration Dat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_years_of_maintenance__c</fullName>
        <label>Number of years of maintenance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operation_maint_plan__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operation &amp;  maint plan</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operations_Maintenance_Plan_in_SOW__c</fullName>
        <label>Operations/Maintenance Plan in SOW</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_proposed_mitigation_activities__c</fullName>
        <label>Other proposed mitigation activities?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Page_Layout_Developer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Page Layout Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Layout_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Page Layout Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Maintenance_Tasks_Involved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Past Maintenance Tasks Involved</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Percentage_Level_Of_Design__c</fullName>
        <label>Percentage Level Of Design</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phase_1_Project_Costs__c</fullName>
        <label>Phase 1 Project Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phase_2_Project_Costs__c</fullName>
        <label>Phase 2 Project Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>